# DevOps-PA2

./: Dockerfile  HTTP_server.cpp  HTTP_server.h  Makefile  Makefile.am  Makefile.in  README.md  TrigFunction.cpp  TrigFunction.h  config.status  configure  configure.ac  configure~  deb.deb  justincase.oppus  main.cpp  scriptA.sh  scriptB.sh  test-script.sh  trig_program
.deps/: HTTP_server.Po  TrigFunction.Po  main.Po
.github/workflows/: makefile.yml
autom4te.cache/: output.1  output.2  traces.0  traces.1  traces.2
deb/DEBIAN/: control
dockerImage/: Dockerfile
tests/: Makefile  Makefile.am  Makefile.in  main.cpp  trigprogramtest1
tests/.deps/: main.Po
